# fun-lawyer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: run-fun-lawyer.yml
launchd/: com.coolpint.fun-lawyer.daily.plist
scripts/: run_daily.sh
src/fun_lawyer/: artifacts.py  cli.py  config.py  db.py  models.py  prompts.py  qa_agent.py
src/fun_lawyer/integrations/: media_tools.py  openai_client.py  teams.py  youtube.py
src/fun_lawyer/stages/: article_builder.py  teams_publisher.py  transcript_worker.py  youtube_watcher.py
state/: fun_lawyer.db
tests/: test_article_builder.py  test_local_article_builder.py  test_media_tools.py  test_qa_agent.py  test_repository.py  test_teams_client.py  test_youtube_watcher.py
