[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fun-lawyer"
version = "0.1.0"
description = "Pipeline for turning new Fun Law Firm YouTube videos into newsroom articles and Teams posts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.68.0",
]

[project.scripts]
fun-lawyer = "fun_lawyer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
